[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Free Inventory/Inventory_style_02c.png" type="Texture" id=1]
[ext_resource path="res://UI/Inventory.gd" type="Script" id=2]
[ext_resource path="res://UI/Slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/SlotContainer.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.592157, 0.694118, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Inventory" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="Sprite" parent="."]
visible = false
position = Vector2( 200, 112 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( 2, 3 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.254902 )
margin_right = 312.0
margin_bottom = 72.0
custom_styles/panel = SubResource( 1 )

[node name="SlotContainer" type="GridContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 168.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
columns = 6
script = ExtResource( 4 )

[node name="Slot0" parent="SlotContainer" instance=ExtResource( 3 )]

[node name="Slot1" parent="SlotContainer" instance=ExtResource( 3 )]
margin_left = 24.0
margin_right = 44.0

[node name="Slot2" parent="SlotContainer" instance=ExtResource( 3 )]
margin_left = 48.0
margin_right = 68.0

[node name="Slot3" parent="SlotContainer" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 92.0

[node name="Slot4" parent="SlotContainer" instance=ExtResource( 3 )]
margin_left = 96.0
margin_right = 116.0

[node name="Slot5" parent="SlotContainer" instance=ExtResource( 3 )]
margin_left = 120.0
margin_right = 140.0
